# sudoku

./: example.txt  justfile  pyproject.toml  requirements.txt
src/sudoku/: __init__.py  canvas.py  config.py  constants.py  data_files.py  grid.py  main.py  main_menu.py  module_caller.py  root.py  text.py  xxx.py
src/sudoku/forms/: frm_config.py  frm_main.py  frm_modal.py
tests/: test_config.py  test_grid.py  test_version.py
